--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
